# eu-licence-validator

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.work  go.work.sum  opencode.json  test_cases.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dev-publish.yml  release-go.yml  release.yml
bindings/go/: eulicencevalidator.go  eulicencevalidator_test.go  go.mod  go.sum
bindings/java/: pom.xml
bindings/js/: package-lock.json  package.json  tsconfig.json
bindings/js/src/: index.ts
bindings/js/test/: index.test.mjs
bindings/node/: package-lock.json  package.json
bindings/node/src/: index.ts
bindings/node/test/: index.test.mjs  index.test.ts
bindings/python/: README.md  pyproject.toml
bindings/python/eu_licence_validator/: __init__.py
bindings/python/tests/: test_validator.py
bindings/ruby/: eu-licence-validator.gemspec
bindings/ruby/lib/: eu_licence_validator.rb
core/: go.mod  main.go  validator.go  validator_test.go
core/validator/: austria.go  belgium.go  france.go  germany.go  italy.go  netherlands.go  poland.go  portugal.go  spain.go  switzerland.go  validator.go
examples/: README.md
examples/go/: example.go  go.mod
examples/java/: Example.java
examples/js/: example.deno.ts  example.mjs  example.vite.ts
examples/node/: example.js
examples/python/: example.py
examples/ruby/: example.rb
(+6 files in other folders)
